# digit-classifier

./: .replit  README.md  prj-mlpc.ipynb  pyproject.toml  requirement.txt  requirements.txt  test.html
django_server/: db.sqlite3  urls.py
django_server/digits/: urls.py  views.py
django_server/digits/static/model/: digit_classifier_t1.joblib
django_server/digits/templates/: test.html
django_server/django_server/: settings.py  urls.py
